--- a/application/views/history/dataQuery.pug
+++ b/application/views/history/dataQuery.pug
@@ -9,8 +9,12 @@ block content
         .col-lg-12
           .p-5
             .text-center
-              h1.h4.text-gray-900.mb-4 Buscar histórico de um dado
-              p.mb-4 Através do histórico é possível verificar todas as alterações no blockchain
+              if(language == 0)
+                h1.h4.text-gray-900.mb-4 Search history of data
+                p.mb-4 Through the history it is possible to check all the changes in the blockchain
+              else 
+                h1.h4.text-gray-900.mb-4 Buscar histórico de um dado
+                p.mb-4 Através do histórico é possível verificar todas as alterações no blockchain                
             form.user(action='/history/data' method='post')
               .form-row
                 .col-md-3
@@ -18,6 +22,10 @@ block content
                   input#data-id.form-control.form-control-user(name='dataId' type='text' placeholder='ID do dado')
               hr
               .float-right.mb-4.inline-block
-                a.btn.btn-danger.btn-user.mr-3.px-5(href='/')
-                  | Cancelar
+                if(language == 0)
+                  a.btn.btn-danger.btn-user.mr-3.px-5(href='/')
+                    | Cancel
+                else 
+                  a.btn.btn-danger.btn-user.mr-3.px-5(href='/')
+                    | Cancelar                 
                 input.btn.btn-primary.btn-user.px-5(type='submit' value='Buscar')
