--- a/application/views/data/components/data-table.pug
+++ b/application/views/data/components/data-table.pug
@@ -1,16 +1,27 @@
 .card.shadow.mb-4
   .card-header.py-3
-    h6.m-0.font-weight-bold.text-primary List Data
+    if(language==0)
+      h6.m-0.font-weight-bold.text-primary List Data
+    else 
+      h6.m-0.font-weight-bold.text-primary Listar Dados
   .card-body
     .table-responsive
       table#dataTable.table.table-bordered(width='100%' cellspacing='0')
         thead
-          tr
-            th Type
-            th Title
-            th ID
-            th Created At
-            th Actions
+          if(language == 0)
+            tr
+              th Type
+              th Title
+              th ID
+              th Created At
+              th Action
+          else
+            tr
+              th Tipo
+              th Título
+              th ID
+              th Criado em
+              th Ação
         tbody
           each data, index in datas
             tr
@@ -24,11 +35,23 @@
                 = data.created_at
 
               td
-                a.btn.btn-info.btn-sm.btn-circle.mr-2(
-                  data-toggle="tooltip" data-placement="top" title="See Details" href="/data/" + data.id
-                )
-                  i.fas.fa-eye
-                a.btn.btn-secondary.btn-sm.btn-circle.mr-2(
-                  data-toggle="tooltip" data-placement="top" title="See History" href="/data/" + data.id + "/list-operations"
-                )
-                  i.fas.fa-history
+                if(language == 0)
+                  a.btn.btn-info.btn-sm.btn-circle.mr-2(
+                    data-toggle="tooltip" data-placement="top" title="See Details" href="/data/" + data.id
+                  )
+                   i.fas.fa-eye
+                else
+                  a.btn.btn-info.btn-sm.btn-circle.mr-2(
+                    data-toggle="tooltip" data-placement="top" title="Ver Detalhes" href="/data/" + data.id
+                  )
+                    i.fas.fa-eye
+                if(language == 0)
+                  a.btn.btn-secondary.btn-sm.btn-circle.mr-2(
+                    data-toggle="tooltip" data-placement="top" title="See History" href="/data/" + data.id + "/list-operations"
+                  )
+                    i.fas.fa-history
+                else 
+                  a.btn.btn-secondary.btn-sm.btn-circle.mr-2(
+                    data-toggle="tooltip" data-placement="top" title="Ver Histórico" href="/data/" + data.id + "/list-operations"
+                  )
+                    i.fas.fa-history
