--- a/application/views/dnaContract/components/royalty-payment.pug
+++ b/application/views/dnaContract/components/royalty-payment.pug
@@ -1,6 +1,9 @@
 .form-row.royalty-payment
   .form-group.col-md-4
-    label.mb-1(for='price') Type
+    if(language == 0)
+      label.mb-1(for='price') Type
+    else 
+      label.mb-1(for='price') Tipo
     a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
       data-content="'no_royalties'- without any type of royalties; <br>\
         'fixed_one_time_fee'- with an unique payment, when buying DNA; <br>\
@@ -10,16 +13,31 @@
         'profit_proportional_periodic_fee'- with a periodic payment, proportional to product profit (e.g. 5%);\
         ")
     select#custom-select.form-control.dropdown-toggle.royalty-payment-select(name="royalty_payments["+index+"][type]" type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
-      option(disabled=true selected=true) -- select an option -- 
-      option(value='no_royalties') No Royalties
-      option(value='fixed_one_time_fee') Fixed One Time Fee 
-      option(value='proportional_one_time_fee') Proportional One Time Fee
-      option(value='fixed_periodic_fee') Fixed Periodic Fee
-      option(value='proportional_periodic_fee') Proportional Periodic Fee
-      option(value='profit_proportional_periodic_fee') Profit Proportional Periodic Fee
+      if(language == 0)
+        option(disabled=true selected=true) -- select an option -- 
+        option(value='no_royalties') No Royalties
+        option(value='fixed_one_time_fee') Fixed One Time Fee 
+        option(value='proportional_one_time_fee') Proportional One Time Fee
+        option(value='fixed_periodic_fee') Fixed Periodic Fee
+        option(value='proportional_periodic_fee') Proportional Periodic Fee
+        option(value='profit_proportional_periodic_fee') Profit Proportional Periodic Fee
+      else 
+        option(disabled=true selected=true) -- selecione uma opção -- 
+        option(value='no_royalties') Sem Royalties
+        option(value='fixed_one_time_fee') Taxa fixa única
+        option(value='proportional_one_time_fee') Taxa única proporcional ao lucro
+        option(value='fixed_periodic_fee') Taxa periódica fixa
+        option(value='proportional_periodic_fee') Taxa periódica proporcional
+        option(value='profit_proportional_periodic_fee') Taxa periódica proporcional ao lucro
   .form-group.col-md-2
-    label.mb-1(for='value') Value 
+    if(language == 0)
+      label.mb-1(for='value') Value 
+    else 
+      label.mb-1(for='value') Valor 
     input#price.form-control.royalty-payment-value(name="royalty_payments["+index+"][value]" type='text' disabled=true required)
   .form-group.col-md-2
-    label.mb-1(for='period') Period in months 
+    if(language == 0)
+      label.mb-1(for='period') Period in months
+    else 
+      label.mb-1(for='period') Período em meses
     input#price.form-control.royalty-payment-period(name="royalty_payments["+index+"][period]" type='text' disabled=true required)
