--- a/application/views/dnaContract/new.pug
+++ b/application/views/dnaContract/new.pug
@@ -9,55 +9,87 @@ block content
         .col-lg-12
           .p-5
             .text-center
-              h1.h4.text-gray-900.mb-4 Create a Smart Contract
-              p.mb-4 This contract is responsible to define the selling condition of DNA
+              if(language == 0)
+                h1.h4.text-gray-900.mb-4 Create a Smart Contract
+                p.mb-4 This contract is responsible to define the selling condition of DNA
+              else 
+                h1.h4.text-gray-900.mb-4 Criar um contrato Inteligente
+                p.mb-4 Este contrato é responsável por definir as condições de venda do DNA
             form.user(action='/dnaContract/new' method='post')
               .form-group
                 label.mb-1(for='dnaId') DNA ID
                 input#dnaId.form-control(readonly name='dnaId' type='text' value=dnaId)
               .form-row
                 .form-group.col-md-6
-                  label.mb-1(for='raw_data_price') Raw Data Price
+                  if(language == 0)
+                    label.mb-1(for='raw_data_price') Raw Data Price
+                  else 
+                    label.mb-1(for='raw_data_price') Preço do Dado Bruto
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
                     data-content="Price that the raw DNA is sold, being fully transfered to the collector. \
                       <br> The processors, to obtain the raw DNA to be processed, must deposit this value in escrow. \
                       The escrow will be closed after the insertion of processed DNA")
                   input.form-control.bio-money-input(name='raw_data_price' type='text' required)
                 .form-group.col-md-6
-                  label.mb-1(for='processed_data_price') Processed Data Price
+                  if(language == 0)
+                    label.mb-1(for='processed_data_price') Processed Data Price
+                  else 
+                    label.mb-1(for='processed_data_price') Preço do Dado Processado
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" 
                     data-content="Price that the processed DNA is sold. This value will be transfered acording to the 'payment distribution'")
                   input.form-control.bio-money-input(name='processed_data_price' type='text' required)
 
               hr.mt-4
-              h6.mb-3  Payment Distribution (in percentage)
+              if(language == 0)
+                h6.mb-3  Payment Distribution (in percentage)
+              else 
+                h6.mb-3  Distribuição de pagamento (em porcentagem)
               .form-row
                 .form-group.col-md-3
-                  label.mb-1(for='price') Collector ( #{contractParameters.collector.min} - #{contractParameters.collector.max} )
+                  if(language == 0)
+                    label.mb-1(for='price') Collector ( #{contractParameters.collector.min} - #{contractParameters.collector.max} )
+                  else 
+                    label.mb-1(for='price') Coletor ( #{contractParameters.collector.min} - #{contractParameters.collector.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="You, who inserts the raw DNA.")
                   input#price.form-control.percentage(name='payment_distribution[collector]' type='text' required)
                 .form-group.col-md-3
-                  label.mb-1(for='price') Processor ( #{contractParameters.processor.min} - #{contractParameters.processor.max} )
+                  if(language == 0)
+                    label.mb-1(for='price') Processor ( #{contractParameters.processor.min} - #{contractParameters.processor.max} )
+                  else 
+                    label.mb-1(for='price') Processador ( #{contractParameters.processor.min} - #{contractParameters.processor.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who process the DNA")
                   input#price.form-control.percentage(name='payment_distribution[processor]' type='text' required)
                 .form-group.col-md-3 
-                  label.mb-1(for='price') Validators ( #{contractParameters.validators.min} - #{contractParameters.validators.max} )
+                  if(language == 0)
+                    label.mb-1(for='price') Validators ( #{contractParameters.validators.min} - #{contractParameters.validators.max} )
+                  else 
+                    label.mb-1(for='price') Validador ( #{contractParameters.validators.min} - #{contractParameters.validators.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Those who validate the processor work (0-2 validators). The reward will be distributed equaly between then")
                   input#price.form-control.percentage(name='payment_distribution[validators]' type='text' readonly value=0 required)
                 .form-group.col-md-3
-                  label.mb-1(for='price') Curator ( #{contractParameters.curator.min} - #{contractParameters.curator.max} )
+                  if(language == 0)
+                    label.mb-1(for='price') Curator ( #{contractParameters.curator.min} - #{contractParameters.curator.max} )
+                  else 
+                    label.mb-1(for='price') Curador ( #{contractParameters.curator.min} - #{contractParameters.curator.max} )
                   a.fas.fa-info-circle.ml-2(tabindex="0" data-toggle="popover" data-html="true" data-trigger="focus" data-content="Who certificate that the DNA is legitim and correct")
                   input#price.form-control.percentage(name='payment_distribution[curator]' type='text' readonly value=0 required)
 
               hr.mt-4
-              h6.mb-3  Royalty Payments
+              if(language == 0)
+                h6.mb-3  Royalty Payments
+              else 
+                h6.mb-3  Royalty Pagamentos
               each index in [0, 1, 2, 3, 4]
                 include components/royalty-payment.pug
 
               hr
               .float-right.mb-4.inline-block
-                a.btn.btn-danger.btn-user.mr-3.px-5(href='/')
-                  | Cancel
+                if(language == 0)
+                  a.btn.btn-danger.btn-user.mr-3.px-5(href='/')
+                    | Cancel
+                else 
+                  a.btn.btn-danger.btn-user.mr-3.px-5(href='/')
+                    | Cancelar
                 input.btn.btn-primary.btn-user.px-5(type='submit' value='Create')
 
 block append scripts
