--- a/application/views/processableData/components/buy-modal.pug
+++ b/application/views/processableData/components/buy-modal.pug
@@ -2,25 +2,41 @@
   .modal-dialog(role='document')
     .modal-content
       .modal-header
-        h5#exampleModalLabel.modal-title Confirm buying?
+        If(language == 0)
+          h5#exampleModalLabel.modal-title Confirm buying?
+        else 
+          h5#exampleModalLabel.modal-title Confirmar compra?
         button.close(type='button' data-dismiss='modal' aria-label='Close')
           span(aria-hidden='true') &times;
-      .modal-body Click in &quot;Buy&quot; below to buy DNA for 
-        = dnaContract.raw_dna_price
-        |  Biocoins
+      if(language == 0)
+        .modal-body Click in &quot;Buy&quot; below to buy DNA for 
+          = dnaContract.raw_dna_price
+          |  Biocoins
+      else 
+        .modal-body Clique em &quot;Comprar&quot; abaixo para comprar o DNA por 
+          = dnaContract.raw_dna_price
+          |  Biocoins        
       .modal-footer.justify-content-start
         form.user(action='execute-contract/' + dnaContract.id method='post')
           .form-row
             .form-check
               input#radioRawData.form-check-input(type='radio', name='type' value='buy_raw_data', checked)
-              label.form-check-label(for='radioRawData')
-                  | Raw Data
+              if(language == 0)
+                label.form-check-label(for='radioRawData')
+                    | Raw Data
+              else 
+                label.form-check-label(for='radioRawData')
+                    | Dado bruto             
           if(dnaContract.accepted_processed_data)
             .form-row
               .form-check
                   input#radioProcessedData.form-check-input(type='radio', name='type' value='buy_processed_data')
-                  label.form-check-label(for='radioProcessedData')
-                      | Processed Data
+                  if(language == 0)
+                    label.form-check-label(for='radioProcessedData')
+                        | Processed Data
+                  else 
+                    label.form-check-label(for='radioProcessedData')
+                        | Dado Processado                  
           .form-row.justify-content-end.mt-4
             button.btn.btn-secondary(type='button' data-dismiss='modal') Cancel
             input.btn.btn-primary.btn-user(type='submit' value='BUY')
