--- a/application/views/processableData/components/data-table.pug
+++ b/application/views/processableData/components/data-table.pug
@@ -1,16 +1,27 @@
 .card.shadow.mb-4
   .card-header.py-3
-    h6.m-0.font-weight-bold.text-primary Raw DNA list
+    if(language == 0)
+      h6.m-0.font-weight-bold.text-primary Raw DNA list
+    else 
+      h6.m-0.font-weight-bold.text-primary Lista de DNA bruto
   .card-body
     .table-responsive
       table#dataTable.table.table-bordered(width='100%' cellspacing='0')
         thead
-          tr
-            th Title
-            th Collector
-            th Created at
-            th Status
-            th Action
+          if(language == 0)
+            tr
+              th Title
+              th Collector
+              th Created at
+              th Status
+              th Action
+          else 
+            tr 
+              th Título
+              th Coletor 
+              th Criado em 
+              th Status 
+              th Ação
         tbody
           each data, index in datas
             tr
@@ -23,10 +34,10 @@
               td
                 = data.status
               td
-                a.btn.btn-info.btn-sm.btn-circle.mr-2(
+                //a.btn.btn-info.btn-sm.btn-circle.mr-2(
                   data-toggle="tooltip" data-placement="top" title="See Details" href="/data/" + data.id
-                )
-                  i.fas.fa-eye
+                //)
+                  //i.fas.fa-eye
                 a.btn.btn-primary.btn-sm.btn-circle.mr(
                   data-placement="top" title="Process" data-toggle="tooltip"  href="/processable-data/show-data/" + data.id
                 )
