--- a/application/views/processableData/show-data.pug
+++ b/application/views/processableData/show-data.pug
@@ -5,38 +5,63 @@ block append header
 
 block content
   .container.mt-4
-    h1 Show Data
+    if(language == 0)
+      h1 Show Data
+    else 
+      h1 Mostrar Dado
     .card.mb-4
       .card-header.d-flex.justify-content-between.align-items-center
         i.fas.fa-cogs
-          |  Data
+          if(language == 0)
+            |  Data
+          else 
+            |  Dados
         div
           if(data.type=='Raw')
             a.btn.btn-primary.btn-sm.mr-4(href='/process-request?search='+data.key)
-              | See Processing Request
+              if(language == 0)  
+                | See Processing Request
+              else 
+                | Ver requisição de processamento
 
           if(dnaContract)
             a.btn.btn-primary.btn-sm.mr-4(href='/processable-data/show-contract/'+ dnaContract.id)
-              | Next 
+              if(language == 0)
+                | Next 
+              else 
+                | Próximo
 
               i.fas.fa-cogs
           else if(data.process_request_id)
             a.btn.btn-primary.btn-sm.text-white.mr-2(data-toggle="modal" data-target="#endorseModal" title="Buy DNA")
-              | Endorse DNA
+              if(language == 0)
+                | Endorse DNA
+              else 
+                | Apoiar DNA
           
           else if(!dnaContract)
               a.btn.btn-danger.btn-sm.mr-4(href='/processable-data')
-                | No Contract Avaliable
+                if(language == 0)
+                  | No Contract Avaliable
+                else 
+                  | Nenhum Contrato Disponível
 
       include components/data-show-form.pug
     .card
-      .card-header List of Owners
+      if(language == 0)
+        .card-header List of Owners
+      else 
+        .card-header Lista de Donos
       .card-body
         .table-responsive
           table#dataTable.table.table-bordered(width='100%' cellspacing='0')
             thead
-              tr 
-                th Owner ID
+              if(language == 0)
+                tr 
+                  th Owner ID
+              else 
+                tr 
+                  th Id do Dono
             tbody
               each ownerId, index in data.owners
                 tr
