--- a/application/views/processor/new.pug
+++ b/application/views/processor/new.pug
@@ -10,8 +10,12 @@ block content
         .col-lg-12
           .p-5
             .text-center
-              h1.h4.text-gray-900.mb-4 Adicionar um Processador
-              p.mb-4 Um processador é responsável por tratar os dados brutos de DNA
+              if(language == 0)
+                h1.h4.text-gray-900.mb-4 Add a processor
+                p.mb-4 A processor is responsible for handling the raw DNA data
+              else 
+                h1.h4.text-gray-900.mb-4 Adicionar um Processador
+                p.mb-4 Um processador é responsável por tratar os dados brutos de DNA                
             form.user(action='/processor/new' method='post')
               .form-group
                 input#name.form-control.form-control-user(name='name' type='text' placeholder='Nome do Processador')
@@ -19,8 +23,12 @@ block content
                 input#organization.form-control.form-control-user(name='organization' type='text' placeholder='Organização Responsável')
               hr
               .float-right.mb-4.inline-block
-                a.btn.btn-danger.btn-user.mr-3.px-5(href='/processor')
-                  | Cancelar
+                if(language == 0)
+                  a.btn.btn-danger.btn-user.mr-3.px-5(href='/processor')
+                    | Cancel
+                else 
+                  a.btn.btn-danger.btn-user.mr-3.px-5(href='/processor')
+                    | Cancelar                  
                 input.btn.btn-primary.btn-user.px-5(type='submit' value='Adicionar')
 
 block append scripts
