--- a/application/views/processor/show.pug
+++ b/application/views/processor/show.pug
@@ -4,23 +4,38 @@ block append header
 
 block content
   .container.mt-4
-    h1 Detalhes do processador
+    if(language == 0)
+      h1 Processor Details
+    else 
+      h1 Detalhes do processador
     .card.mb-4
-      .card-header Processador
+      if(language == 0)
+        .card-header Processor
+      else 
+        .card-header Processador
       .card-body
         form
           .form-group
-            label.mb-1(for='name') Nome
+            if(language == 0)
+              label.mb-1(for='name') Name
+            else 
+              label.mb-1(for='name') Nome
             input#name.form-control(disabled type='text' value= processor.name)
           .form-group
-            label.mb-1(for='organization') Organização
+            if(language == 0)
+              label.mb-1(for='organization') Organization
+            else 
+              label.mb-1(for='organization') Organização
             input#organization.form-control(disabled type='text' value= processor.organization)
           .form-row
             .form-group.col-md-6
               label.mb-1(for='id') ID
               input#id.form-control(disabled type='text'  value=processor.id)
             .form-group.col-md-6
-              label.mb-1(for='created_at') Criado em
+              if(language == 0)
+                label.mb-1(for='created_at') Created at
+              else 
+                label.mb-1(for='created_at') Criado em
               input#id.form-control(disabled type='text'  value=processor.created_at)
 
 
